[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/DebugUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/scripts/DebugUI.gd" type="Script" id=3]
[ext_resource path="res://assets/skyboxes/space_skybox.tres" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/scripts/MainScene.gd" type="Script" id=5]
[ext_resource path="res://ui/DriverDash.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/tests/BigSphere.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Stars.gd" type="Script" id=8]

[sub_resource type="GDScript" id=3]
script/source = "extends CanvasLayer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky_custom_fov = 108.5

[node name="MainScene" type="Spatial"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="LightUp" type="OmniLight" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 100, 0 )
light_energy = 4.376
omni_range = 4096.0

[node name="LightDown" type="OmniLight" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 15.5435 )
omni_range = 4096.0

[node name="UI" type="Node" parent="."]

[node name="OverlayCanvas" type="CanvasLayer" parent="UI"]
script = SubResource( 3 )

[node name="DebugUI" parent="UI/OverlayCanvas" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="DebugTick" type="Timer" parent="UI/OverlayCanvas"]
wait_time = 2.0
autostart = true

[node name="DriverDash" parent="UI/OverlayCanvas" instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="BigSphere" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 200, 0, 0 )

[node name="Stars" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
cast_shadow = 0
generate_lightmap = false
mesh = ExtResource( 4 )
skeleton = NodePath("../WorldEnvironment")
material/0 = null
script = ExtResource( 8 )
TargetPath = NodePath("../Player")

[connection signal="direction_update" from="Player" to="UI/OverlayCanvas/DriverDash" method="_on_Player_direction_update"]
[connection signal="notification" from="Player" to="." method="_on_Player_notification"]
[connection signal="torque_update" from="Player" to="UI/OverlayCanvas/DriverDash" method="_on_Player_torque_update"]
[connection signal="view_switched" from="Player" to="." method="_on_Player_view_switched"]
[connection signal="timeout" from="UI/OverlayCanvas/DebugTick" to="UI/OverlayCanvas/DebugUI" method="_on_DebugTick_timeout"]
